# Daft

./: Cargo.toml
daft/: context.py  daft.pyi  series.py
daft/expressions/: expressions.py
daft/logical/: builder.py
daft/plan_scheduler/: physical_plan_scheduler.py
daft/runners/: pyrunner.py  ray_runner.py
src/: lib.rs
src/daft-execution/: Cargo.toml
src/daft-execution/src/: lib.rs
src/daft-execution/src/compute/: mod.rs
src/daft-execution/src/compute/ops/: filter.rs  mod.rs  op_builder.rs  ops.rs  project.rs  scan.rs  shuffle.rs  sort.rs
src/daft-execution/src/compute/partition/: mod.rs  partition_ref.rs  partition_task.rs  partition_task_scheduler.rs  partition_task_tree.rs  virtual_partition.rs
src/daft-execution/src/compute/tree/: mod.rs  partition_task_scheduler.rs  partition_task_tree.rs
src/daft-execution/src/executor/: executor.rs  mod.rs  resource_manager.rs
src/daft-execution/src/executor/local/: local_executor.rs  local_partition_ref.rs
src/daft-execution/src/executor/ray/: ray_executor.rs  ray_partition_ref.rs
src/daft-execution/src/runner/: execution_plan_scheduler.rs  mod.rs  runner.rs  stage_planner.rs  stage_runner.rs
src/daft-execution/src/stage/: mod.rs  stage.rs
src/daft-execution/src/stage/exchange/: collect.rs  exchange.rs  mod.rs  shuffle.rs  sort.rs
src/daft-execution/src/stage/sink/: collect.rs  mod.rs  sink.rs
src/daft-plan/: Cargo.toml
tests/cookbook/: conftest.py  test_filter.py  test_sorting.py
tests/expressions/: test_expressions.py
tests/series/: test_float.py
tests/table/: test_filter.py
(+18 files in other folders)
